[gd_scene load_steps=18 format=3 uid="uid://fxexljwchmry"]

[ext_resource type="Texture2D" uid="uid://jln7tb52olq" path="res://Sprites/PlayerWalkSheet.png" id="1_5ws6w"]
[ext_resource type="Script" path="res://Scripts/PlayerScript.gd" id="1_u4qt4"]
[ext_resource type="Texture2D" uid="uid://ca3pts8vurgym" path="res://Sprites/PlayerFire.png" id="2_fstrm"]
[ext_resource type="AudioStream" uid="uid://cl4jggpvvl6pa" path="res://Audio/Fire1.wav" id="2_jyvsm"]
[ext_resource type="Texture2D" uid="uid://2xlrd80rfhxn" path="res://Sprites/PlayerJump.png" id="3_63xfg"]
[ext_resource type="AudioStream" uid="uid://c0vjitu3dyl2x" path="res://Audio/Fire2.wav" id="3_edrse"]
[ext_resource type="PackedScene" uid="uid://ctgdehyhn78h6" path="res://Prefabs/Components/HealthComponent.tscn" id="5_brs8r"]
[ext_resource type="AudioStream" uid="uid://d2vs6sd7o37lv" path="res://Audio/Jump.wav" id="6_4yu0f"]
[ext_resource type="AudioStream" uid="uid://nwbgiyw63y8g" path="res://Audio/PlayerHurt.wav" id="8_6q0td"]
[ext_resource type="PackedScene" uid="uid://bhbutxbjgdcm4" path="res://Prefabs/ExplosionEffectRoot.tscn" id="8_jom66"]
[ext_resource type="AudioStream" uid="uid://437b4rrdlcet" path="res://Audio/PlayerDefeat.wav" id="9_eitc2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qt564"]
atlas = ExtResource("1_5ws6w")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qvem"]
atlas = ExtResource("1_5ws6w")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36o4j"]
atlas = ExtResource("1_5ws6w")
region = Rect2(0, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n1oij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fstrm")
}],
"loop": true,
"name": &"fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt564")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_63xfg")
}],
"loop": true,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qvem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36o4j")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2ku0"]
size = Vector2(14, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5n75"]
size = Vector2(14, 27)

[node name="Player" type="CharacterBody2D"]
collision_mask = 152
script = ExtResource("1_u4qt4")
soundStreamShot = Array[AudioStream]([ExtResource("2_jyvsm"), ExtResource("3_edrse")])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_n1oij")
animation = &"fire"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.49998)
scale = Vector2(1, 1.5)
shape = SubResource("RectangleShape2D_e2ku0")

[node name="HealthComponent" parent="." instance=ExtResource("5_brs8r")]
afterHitBlinkTime = 6
alwaysPlayDeathSound = true
isPlayer = true
createOnDeath = Array[PackedScene]([ExtResource("8_jom66")])

[node name="SoundHurt" parent="HealthComponent" index="0"]
stream = ExtResource("8_6q0td")

[node name="SoundDeath" parent="HealthComponent" index="1"]
stream = ExtResource("9_eitc2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="Area2DCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_r5n75")

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4yu0f")
volume_db = -6.0

[node name="SoundShot" type="AudioStreamPlayer" parent="."]
volume_db = -4.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]

[editable path="HealthComponent"]
